...
    <string name="address_edit_title">Adresi d&#252;zenle</string>
    <string name="address_create_heading">Adres ekleyin</string>
    <string name="address_edit_heading">Adresi d&#252;zenleyin</string>
    <string name="address_form_explanation">Ad, soyad, açık adres ve şehir zorunludur. Mahalle, bina ve daire bilgisini ikinci adres satırına ekleyebilirsiniz.</string>
    <string name="address_country">&#220;lke</string>
    <string name="address_country_value">&#220;lke: Desteklenen b&#246;lge</string>
    <string name="address_first_name">Ad</string>
    <string name="address_last_name">Soyad</string>
    <string name="address_company">&#350;irket (iste&#287;e ba&#287;l&#305;)</string>
    <string name="address_line1">Adres sat&#305;r&#305; 1</string>
    <string name="address_line2">Adres sat&#305;r&#305; 2: mahalle, bina, daire (iste&#287;e ba&#287;l&#305;)</string>
    <string name="address_city">&#350;ehir / il&#231;e</string>
    <string name="address_postal_code">Posta kodu (iste&#287;e ba&#287;l&#305;)</string>
...
    <string name="address_reload_discard">Sunucudan yeniden y&#252;kle ve tasla&#287;&#305; at</string>
    <string name="address_error_required">Bu alan zorunludur.</string>
    <string name="address_error_invalid_characters">Bu alan kontrol karakteri veya HTML i&#351;areti i&#231;eremez.</string>
    <string name="address_error_too_long">Bu alan en fazla 255 karakter olabilir.</string>
    <string name="address_error_phone">Telefonu E.164 bi&#231;iminde yaz&#305;n.</string>
    <string name="address_error_postal_code">Ge&#231;erli bir posta kodu yaz&#305;n.</string>
    <string name="address_error_server_rejected">Shopify bu alan&#305; kabul etmedi. De&#287;eri kontrol edin.</string>
    <string name="address_failure_connection">Ba&#287;lant&#305; nedeniyle adresler do&#287;rulanamad&#305;. Cihazda kal&#305;c&#305; adres kopyas&#305; g&#246;sterilmez.</string>
    <string name="address_failure_service">Shopify adres hizmeti &#351;u anda do&#287;rulanamad&#305;.</string>
    <string name="address_failure_conflict">Adres siz formu a&#231;t&#305;ktan sonra de&#287;i&#351;mi&#351;. Tasla&#287;&#305; yeniden g&#246;ndermeden &#246;nce sunucudan y&#252;kleyin.</string>
    <string name="address_failure_unconfirmed">&#304;&#351;lemin Shopify\'a ula&#351;&#305;p ula&#351;mad&#305;&#287;&#305; do&#287;rulanamad&#305;. Otomatik tekrar yap&#305;lmad&#305;; sunucudan yeniden y&#252;kleyin.</string>
    <string name="address_failure_default_protected">Varsay&#305;lan adres silinemez. &#214;nce ba&#351;ka bir adresi varsay&#305;lan yap&#305;n.</string>
    <string name="address_failure_server_rejected">Shopify adres i&#351;lemini kabul etmedi. Adresi yeniden y&#252;kleyip alanlar&#305; kontrol edin.</string>
...
