...
    LAST_NAME,
    COMPANY,
    ADDRESS1,
    ADDRESS2,
    CITY,
    ZIP,
    PHONE,
    COUNTRY,
    FORM
}

enum class CustomerAddressIssue {
    DEFAULT_ADDRESS_PROTECTED,
...
